# cookiecutter-analysis

./: cookiecutter.json
plugins/: article.qmd  estimates_validation.R  old_tasks.py  randomization.py  report.Rnw  report.qmd  report.tex  slides.Rnw
{{ cookiecutter.project_dir }}/: .gitignore  Makefile  flake.nix  pyproject.toml  shell.nix  tasks.py
{{ cookiecutter.project_dir }}/proj/: info.ini
{{ cookiecutter.project_dir }}/proj/bibliometric_research/: Makefile
{{ cookiecutter.project_dir }}/proj/docs/ricerca_bibliometrica/: Makefile
{{ cookiecutter.project_dir }}/src/: __init__.py  common.py  data_cleaning.py  include.R  report.Rnw  report.qmd  report.tex
{{ cookiecutter.project_dir }}/src/prjlib/: README.md  pyproject.toml
{{ cookiecutter.project_dir }}/src/prjlib/src/prjlib/: __init__.py
{{ cookiecutter.project_dir }}/utils/: add_data_generic  add_data_redcap  add_plugins  add_protocol  compile_qmd  compile_rnw  project_init  venv_freeze  zip_results
{{ cookiecutter.project_slug }}/: README.md  tasks.py
{{ cookiecutter.project_slug }}/proj/: info.ini
{{ cookiecutter.project_slug }}/src/: report.qmd  report.tex
