[project]
name = "{{cookiecutter.pi_surname}}-{{cookiecutter.project_acronym}}"
version = "0.1.0"
title = "{{cookiecutter.project_title}}"
description = "{{cookiecutter.project_description}}"
acronym = "{{cookiecutter.project_acronym}}"
title = "{{cookiecutter.project_title}}"
url = "https://lbraglia@gitlab.com/lbraglia/{{cookiecutter.project_repo}}.git"
created = "{{cookiecutter.project_created}}"
contatto = "{{cookiecutter.project_contatto}}"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyter",
    "tabulate",
    "pylbmisc",
    "prjlib",
]

[pi]
surname = "{{cookiecutter.pi_surname}}"
name = "{{cookiecutter.pi_name}}"
uo = "{{cookiecutter.pi_uo}}"

[tool.uv.sources]
pylbmisc = { path = "../../.src/pypkg/pylbmisc", editable = true }
prjlib = { path = "src/prjlib", editable = true }

